networking/openshift/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knime-business-hub-ingress
  namespace: knime
  annotations:
    haproxy.router.openshift.io/timeout: 1800s
spec:
  ingressClassName: <ingressclass>
  rules:
    - host: <baseurl>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 443
    - host: api.<baseurl>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 443
    - host: apps.<baseurl>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 443
    - host: ws.<baseurl>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 443
    - host: auth.<baseurl>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 443
    - host: storage.<baseurl>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 443
